--- a/assets/css/app-preview.css
+++ b/assets/css/app-preview.css
@@ -46,8 +46,6 @@ input[type="search"]::-webkit-search-cancel-button {
 /* CONTAINERS */
 
 .title-bar {
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
     display: flex;
     align-items: center;
     gap: 5px;
@@ -89,6 +87,8 @@ input[type="search"]::-webkit-search-cancel-button {
     padding: 10px 20px;
     display: flex;
     align-items: center;
+    justify-content: right;
+    flex-wrap: wrap;
     gap: 10px;
     background-color: #0f172a;
     border-bottom: 1px solid var(--border-color);
@@ -147,6 +147,9 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 
 .btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #172554;
     color: #60a5fa;
     border: 1px solid transparent;
@@ -154,9 +157,9 @@ input[type="search"]::-webkit-search-cancel-button {
     padding: 8px 10px;
     transition: .25s ease;
     cursor: pointer;
-    height: 35px;
     -webkit-app-region: no-drag;
     outline: none;
+    height: 35px;
 }
 
 .btn:hover {
