--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,6 +94,17 @@ body {
     font-size: 14px;
 }
 
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 .space-header {
     display: flex;
     flex-direction: column;
@@ -105,6 +116,8 @@ body {
     margin-bottom: 150px;
     text-align: center;
     flex: 1 1;
+    opacity: 0;
+    animation: fadeIn .5s .5s ease forwards;
 }
 
 .gradient {
@@ -136,6 +149,8 @@ body {
     display: flex;
     gap: 10px;
     padding: 15px;
+    opacity: 0;
+    animation: fadeIn .5s 1s ease forwards;
 }
 
 .space-footer-copyright {
@@ -183,23 +198,36 @@ nav {
     align-items: center;
     justify-content: center;
     z-index: 99;
+    box-shadow: 0 0 25px black;
     backdrop-filter: blur(30px);
     background-color: rgba(0, 0, 0, 0.5);
-    box-shadow: 0 0 25px black;
 }
 
 .space-navbar {
     padding: 20px;
-    cursor: pointer;
+}
+
+@keyframes space-navbar-animation {
+    from {
+        opacity: 0;
+        transform: translateY(50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 .space-navbar h1 {
     font-size: 32px;
     font-family: "Minimo", sans-serif;
     transition: .25s ease;
+    cursor: pointer;
+    opacity: 0;
+    animation: space-navbar-animation .5s .25s ease forwards;
 }
 
-.space-navbar:hover h1 {
+.space-navbar h1:hover {
     transform: scale(1.25) translateY(-5px);
 }
 
@@ -210,6 +238,8 @@ main {
     align-items: center;
     flex-direction: column;
     gap: 25px;
+    opacity: 0;
+    animation: fadeIn .5s .75s ease forwards;
 }
 
 .space-app-preview {
