--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,7 +166,7 @@ button {
     text-decoration: none;
 }
 
-a,
+a.header,
 button.header {
     border: 1px solid rgb(50, 50, 50);
     padding: 12px 15px;
@@ -177,12 +177,12 @@ button.header {
     color: white;
 }
 
-a,
+a.header:hover,
 button.header:hover {
     background: rgb(40, 40, 40);
 }
 
-a,
+a.header.white,
 button.header.white {
     border: 1px solid white;
     background: white;
