--- a/pages/components/index.html
+++ b/pages/components/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space - Components</title>
-    <link rel="stylesheet" href="assets/css/components.css">
+    <link rel="stylesheet" href="../../assets/css/components.css">
 </head>
 
 <body>
     <div class="wrapper">
         <header>
             <div class="title">
-                <a href="/" class="gradient">space</a>
+                <a href="/home" class="gradient">space</a>
                 <p>Components</p>
             </div>
         </header>
